# scratch

./: .gitignore  CMakeLists.txt  main.cpp
algorithms/: sort.h
containers/: double_linked_list.h  linked_list.h  queue.h  stack.h
ext/gtest/: CMakeLists.txt
src/: basic.cpp  basic.h  linked_list.cpp  linked_list.h
test/: test_basic.cpp  test_double_linked_list.cpp  test_linked_list.cpp  test_queue.cpp  test_sort.cpp  test_stack.cpp
